Updated to Optimax 2.0 + [try]NTFS support

--- a/include/config/tristate.conf
+++ b/include/config/tristate.conf
@@ -69,6 +69,7 @@ CONFIG_HID_SAITEK=Y
 CONFIG_NETFILTER_XT_MATCH_STRING=Y
 CONFIG_USB_STORAGE=Y
 CONFIG_SENSORS_K2HH=Y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=Y
 CONFIG_SAMSUNG_DWC_USB2PHY=Y
 CONFIG_SND_USB_AUDIO=Y
 CONFIG_HID_APPLE=Y
@@ -416,8 +417,10 @@ CONFIG_DEVFREQ_GOV_SIMPLE_EXYNOS=Y
 CONFIG_BLK_DEV_SD=Y
 CONFIG_NETFILTER_NETLINK=Y
 CONFIG_BITREVERSE=Y
+CONFIG_IOSCHED_BFQ=Y
 CONFIG_CRYPTO_BLKCIPHER=Y
 CONFIG_NF_CONNTRACK=Y
+CONFIG_IOSCHED_FIOPS=Y
 CONFIG_LCD_CLASS_DEVICE=Y
 CONFIG_VPNCLIENT_SECURITY=Y
 CONFIG_SND_SOC_I2C_AND_SPI=Y
