--- a/arch/arm64/configs/j7e3g_defconfig
+++ b/arch/arm64/configs/j7e3g_defconfig
@@ -3517,7 +3517,9 @@ CONFIG_INOTIFY_USER=y
 # CONFIG_AUTOFS4_FS is not set
 CONFIG_FUSE_FS=y
 CONFIG_CUSE=y
-
+CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
 #
 # Caches
 #
