--- a/include/config/auto.conf
+++ b/include/config/auto.conf
@@ -70,7 +70,7 @@ CONFIG_CRYPTO_AEAD=y
 CONFIG_COMPAT=y
 CONFIG_BQL=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
-CONFIG_DEFAULT_TCP_CONG="bic"
+CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 CONFIG_DEVTMPFS=y
 CONFIG_OF_IOMMU=y
@@ -94,6 +94,7 @@ CONFIG_CRYPTO_RNG2=y
 CONFIG_NETFILTER_NETLINK_QUEUE=y
 CONFIG_USB_U_SERIAL=y
 CONFIG_TUN=y
+CONFIG_DEFAULT_FIOPS=y
 CONFIG_CFG80211=y
 CONFIG_OF_RESERVED_MEM=y
 CONFIG_TREE_PREEMPT_RCU=y
@@ -205,6 +206,7 @@ CONFIG_GENERIC_CPU_AUTOPROBE=y
 CONFIG_STANDALONE=y
 CONFIG_SENSORS_K2HH=y
 CONFIG_SCHED_MC=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_SAMSUNG_DWC_USB2PHY=y
 CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_WATCHDOG_CORE=y
@@ -344,9 +346,7 @@ CONFIG_SPARSE_IRQ=y
 CONFIG_USE_VENDER_FEATURE=y
 CONFIG_IP_NF_MANGLE=y
 CONFIG_HID_PICOLCD_LEDS=y
-CONFIG_SEC_OOM_KILLER=y
 CONFIG_MALI_DEBUG_SYS=y
-CONFIG_DEFAULT_CFQ=y
 CONFIG_RCU_STALL_COMMON=y
 CONFIG_VPNCLIENT_PROC_UID=1000
 CONFIG_INET6_XFRM_MODE_TUNNEL=y
@@ -583,7 +583,6 @@ CONFIG_EXYNOS7580_SHM_IPC=y
 CONFIG_BASE_FULL=y
 CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_ZLIB_DEFLATE=y
-CONFIG_DEFAULT_BIC=y
 CONFIG_GPIO_SYSFS=y
 CONFIG_FW_LOADER=y
 CONFIG_KALLSYMS=y
@@ -777,7 +776,7 @@ CONFIG_TOUCHSCREEN_MELFAS_MMS438=y
 CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_MUIC_NOTIFIER=y
 CONFIG_DEBUG_KERNEL=y
-CONFIG_LOCALVERSION="-Optimax_uber"
+CONFIG_LOCALVERSION="-test"
 CONFIG_CAMERA_EEPROM_SUPPORT_REAR=y
 CONFIG_CRYPTO=y
 CONFIG_SCHED_DEBUG=y
@@ -915,7 +914,7 @@ CONFIG_HZ=100
 CONFIG_I2C_HELPER_AUTO=y
 CONFIG_NETFILTER_XT_MATCH_U32=y
 CONFIG_INET_AH=y
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="fiops"
 CONFIG_IPV6_MIP6=y
 CONFIG_VIDEO_EXYNOS_SCALER=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
@@ -983,7 +982,6 @@ CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 CONFIG_TICK_ONESHOT=y
 CONFIG_NF_NAT_PROTO_UDPLITE=y
-CONFIG_CGROUP_DEBUG=y
 CONFIG_SW_SYNC=y
 CONFIG_DECON_EVENT_LOG=y
 CONFIG_HID_PICOLCD_BACKLIGHT=y
@@ -1080,6 +1078,7 @@ CONFIG_TEXTSEARCH=y
 CONFIG_WLAN_REGION_CODE=100
 CONFIG_BATTERY_SWELLING=y
 CONFIG_USB_SUPPORT=y
+CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
 CONFIG_STAGING=y
@@ -1150,16 +1149,19 @@ CONFIG_EXYNOS_IOMMU_NO_MASTER_CLKGATE=y
 CONFIG_HID_PICOLCD_LCD=y
 CONFIG_RCU_FANOUT=64
 CONFIG_BITREVERSE=y
+CONFIG_IOSCHED_BFQ=y
 CONFIG_BLK_DEV_RAM_SIZE=16384
 CONFIG_EXYNOS_NOC_DEBUGGING=y
 CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_NF_CONNTRACK=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_VPNCLIENT_SECURITY=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_FILE_LOCKING=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_ZSWAP=y
+CONFIG_CGROUP_BFQIO=y
 CONFIG_AIO=y
 CONFIG_OF=y
 CONFIG_NET_EMATCH=y
